[package]
name = "safe_drive"
version = "0.1.0"
edition = "2021"
authors = ["Yuuki Takano <yuuki.takano@tier4.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.14"
crossbeam-channel = "0.5"
parking_lot = "0.12"
signal-hook = "0.3"
ctor = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.memac]
version = "0.4"
optional = true
default-features=false

[dev-dependencies]
futures = "0.3"

[dev-dependencies.async-std]
version = "1.12"
features = ["attributes"]

[features]
default = []
statistics = ["serde", "serde_json"]
rcl_stat = ["statistics"]
humble = []
galactic = []
custom_alloc = ["memac"]
memsize_32m = ["memac/buddy_32m"]
memsize_64m = ["memac/buddy_64m"]
memsize_128m = ["memac/buddy_128m"]
memsize_256m = ["memac/buddy_256m"]
memsize_512m = ["memac/buddy_512m"]
memsize_1g = ["memac/buddy_1g"]
memsize_2g = ["memac/buddy_2g"]
memsize_4g = ["memac/buddy_4g"]
memsize_8g = ["memac/buddy_8g"]
memsize_16g = ["memac/buddy_16g"]
memsize_32g = ["memac/buddy_32g"]
memsize_64g = ["memac/buddy_64g"]
memsize_128g = ["memac/buddy_128g"]
memsize_256g = ["memac/buddy_256g"]
memsize_512g = ["memac/buddy_512g"]
memsize_1t = ["memac/buddy_1t"]
memsize_2t = ["memac/buddy_2t"]
memsize_4t = ["memac/buddy_4t"]
memsize_8t = ["memac/buddy_8t"]
