[package]
name = "safe_drive"
version = "0.2.0"
edition = "2021"
authors = [ "Yuuki Takano <yuuki.takano@tier4.jp>, TIER IV, Inc.", "Seio Inoue" ]
description = "safe_drive: Formally Specified Rust Bindings for ROS2"
license-file = "LICENSE"
readme = "README.md"
keywords = ["Robotics", "ROS2"]
categories = [ "science::robotics" ]
repository = "https://github.com/tier4/safe_drive"
homepage = "https://tier4.github.io/safe_drive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
once_cell = "1.14"
crossbeam-channel = "0.5"
parking_lot = "0.12"
signal-hook = "0.3"
libc = "0.2"
pin-project = "1.0"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1"
optional = true

[dev-dependencies.memac]
version = "0.5"

[dev-dependencies]
futures = "0.3"

[dev-dependencies.async-std]
version = "1.12"
features = ["attributes"]

[features]
default = []
statistics = ["serde", "serde_json"]
rcl_stat = ["statistics"]
humble = []
galactic = []
custom_alloc = []

[package.metadata.docs.rs]

# Features to pass to Cargo (default: [])
features = ["humble", "custom_alloc"]

# Whether to pass `--all-features` to Cargo (default: false)
all-features = false

# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

